manifests/jellyfin/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: media
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - jellyfin
  rules:
    - host: jellyfin
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
